--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,7 +3,7 @@
 
 @string{aps = {American Physical Society,}}
 
-@article{LI2023101173,
+@article{point-cloud-completion,
 title = {High-fidelity point cloud completion with low-resolution recovery and noise-aware upsampling},
 journal = {Graphical Models},
 volume = {126},
@@ -19,4 +19,12 @@ author = {Ren-Wu Li and Bo Wang and Lin Gao and Ling-Xiao Zhang and Chun-Peng Li
 keywords = {Point cloud completion, Point cloud analysis, Deep learning, Computer vision},
 abstract = {Completing an unordered partial point cloud is a challenging task. Existing approaches that rely on decoding a latent feature to recover the complete shape, often lead to the completed point cloud being over-smoothing, losing details, and noisy. Instead of decoding a whole shape, we propose to decode and refine a low-resolution (low-res) point cloud first, and then perform a patch-wise noise-aware upsampling rather than interpolating the whole sparse point cloud at once, which tends to lose details. Regarding the possibility of lacking details of the initially decoded low-res point cloud, we propose an iterative refinement to recover the geometric details and a symmetrization process to preserve the trustworthy information from the input partial point cloud. After obtaining a sparse and complete point cloud, we propose a patch-wise upsampling strategy. Patch-based upsampling allows to recover fine details better rather than decoding a whole shape. The patch extraction approach is to generate training patch pairs between the sparse and ground-truth point clouds with an outlier removal step to suppress the noisy points from the sparse point cloud. Together with the low-res recovery, our whole pipeline can achieve high-fidelity point cloud completion. Comprehensive evaluations are provided to demonstrate the effectiveness of the proposed method and its components.},
 preview={gm.png}
+}
+
+@inproceedings{e3sym,
+title = {E3Sym: Leveraging E(3) Invariance for Unsupervised 3D Planar Reflective Symmetry Detection},
+year = {2023},
+author = {Ren-Wu Li and Ling-Xiao Zhang and Chun-Peng Li and Yu-Kun Lai and Lin Gao},
+booktitle = {International Conference on Computer Vision (ICCV)},
+preview={e3sym.png}
 }
