--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -35,3 +35,13 @@ html = {https://openaccess.thecvf.com/content/ICCV2023/html/Li_E3Sym_Leveraging_
 pdf = {https://openaccess.thecvf.com/content/ICCV2023/papers/Li_E3Sym_Leveraging_E3_Invariance_for_Unsupervised_3D_Planar_Reflective_Symmetry_ICCV_2023_paper.pdf},
 abstract = {Detecting symmetrical properties is a fundamental task in 3D shape analysis. In the case of a 3D model with planar symmetries, each point has a corresponding mirror point w.r.t. a symmetry plane, and the correspondences remain invariant under any arbitrary Euclidean transformation. Our proposed method, E3Sym, aims to detect planar reflective symmetry in an unsupervised and end-to-end manner by leveraging E(3) invariance. E3Sym establishes robust point correspondences through the use of E(3) invariant features extracted from a lightweight neural network, from which the dense symmetry prediction is produced. We also introduce a novel and efficient clustering algorithm to aggregate the dense prediction and produce a detected symmetry set, allowing for the detection of an arbitrary number of planar symmetries while ensuring the method remains differentiable for end-to-end training. Our method also possesses the ability to infer reasonable planar symmetries from incomplete shapes, which remains challenging for existing methods. Extensive experiments demonstrate that E3Sym is both effective and robust, outperforming state-of-the-art methods.}
 }
+
+@InProceedings{Li_2024_BMVC,
+author = {Ren-Wu Li and Wenjing Ke and Dong Li and Lu Tian and Emad Barsoum},
+title     = {MonoGS++: Fast and Accurate Monocular RGB Gaussian SLAM},
+booktitle = {The British Machine Vision Conference (BMVC)},
+month     = {November },
+year      = {2024},
+preview = {monogs++.png},
+bibtex_show = true,
+}
