--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,7 +3,24 @@
 
 @string{aps = {American Physical Society,}}
 
-@article{point-cloud-completion,
+@article{Li_2022_CJIST,
+author = {栗仁武, 张凌霄, 高林, 李淳芃, 蒋浩},
+title = {基于点云的类级别物体姿态估计},
+publisher = {智能科学与技术学报},
+year = {2022},
+journal = {智能科学与技术学报},
+volume = {4},
+number = {2},
+eid = {246},
+numpages = {8},
+pages = {246},
+keywords = {姿态估计;点云处理;深度学习;模式识别},
+url = {https://www.infocomm-journal.com/znkx/CN/abstract/article_172524.shtml},
+doi = {10.11959/j.issn.2096-6652.202227},
+preview={cjist.png}
+}
+
+@article{Li_2023_GM,
 title = {High-fidelity point cloud completion with low-resolution recovery and noise-aware upsampling},
 journal = {Graphical Models},
 volume = {126},
