--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,7 +4,7 @@
 @string{aps = {American Physical Society,}}
 
 @article{Li_2022_CJIST,
-author = {栗仁武, 张凌霄, 高林, 李淳芃, 蒋浩},
+author = {Ren-Wu Li and Ling-Xiao Zhang and Lin Gao and Chun-Peng Li and Hao Jiang},
 title = {基于点云的类级别物体姿态估计},
 publisher = {智能科学与技术学报},
 year = {2022},
