--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -15,7 +15,9 @@ eid = {246},
 numpages = {8},
 pages = {246},
 keywords = {姿态估计;点云处理;深度学习;模式识别},
-url = {https://www.infocomm-journal.com/znkx/CN/abstract/article_172524.shtml},
+url = {https://www.infocomm-journal.com/znkx/CN/10.11959/j.issn.2096-6652.202227},
+html = {https://www.infocomm-journal.com/znkx/CN/10.11959/j.issn.2096-6652.202227},
+pdf = {https://www.infocomm-journal.com/znkx/CN/PDF/10.11959/j.issn.2096-6652.202227?token=6a9c44b43d0c43a29e7908eee4e659e0},
 doi = {10.11959/j.issn.2096-6652.202227},
 preview={cjist.png}
 }
