--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -19,7 +19,8 @@ url = {https://www.infocomm-journal.com/znkx/CN/10.11959/j.issn.2096-6652.202227
 html = {https://www.infocomm-journal.com/znkx/CN/10.11959/j.issn.2096-6652.202227},
 pdf = {https://www.infocomm-journal.com/znkx/CN/PDF/10.11959/j.issn.2096-6652.202227?token=6a9c44b43d0c43a29e7908eee4e659e0},
 doi = {10.11959/j.issn.2096-6652.202227},
-preview={cjist.png}
+bibtex_show = true,
+preview={cjist.png},
 }
 
 @article{Li_2023_GM,
